# testmind

./: .gitignore  .testmindrc.json  ISSUES.md  TODO.md  alma-analysis-then-testmind-architecture-blueprint.md  alma-architecture-analysis.md  alma-design-analysis-for-reference.md  alma-inspired-detailed-architecture-for-dev-pretest-tool.md  alma-全栈架构逆向分析.md  analysis-mvp-strategy.md  architecture-design-and-implementation-plan.md  copilot-and-llm-context-strategy-for-test-generation.md  database-schema-design-for-electron-quality-tool.md  dev-pretest-bug-reduction-solution.md  dev-pretest-platform-architecture-and-dashboard.md  electron-architecture-design.md  extensible-electron-architecture-design.md  integrated-nextjs-architecture-for-dev-quality-platform.md  jira-llm-e2e-with-code-context-design.md  llm-jira-e2e-demand-analysis.md  llm-jira-e2e-effect-dashboard-plan.md  llm-jira-e2e-management-report.md  mvp0-design.md  package-lock.json  package.json  privacy-first-electron-vs-platform-analysis.md  project-note.md  testmind-usage-guide.md  tsconfig.json  tsup.config.ts
rust/: Cargo.toml  README.md
rust/knowledge/: README.md
rust/knowledge/bug-patterns/: BUG-AUTH-001.yaml
rust/knowledge/decisions/: ADR-AUTH-001.yaml
rust/knowledge/requirements/: REQ-AUTH-001.yaml
rust/src/: gate.rs  main.rs  pipeline.rs  reporter.rs  types.rs  utils.rs
rust/src/llm/: provider.rs
rust/src/stages/: context_builder.rs  dependency_tracer.rs  git_analyzer.rs  history_analyzer.rs  knowledge_retriever.rs  llm_analyzer.rs  mod.rs  test_scanner.rs
src/: cli.ts  pipeline.ts  (+5 more)
(+40 files in other folders)
