[package]
name = "testmind"
version = "0.1.0"
edition = "2021"
description = "Code-change-driven self-test advisor"
license = "MIT"
repository = "https://github.com/deltamx-ai/testmind"

[[bin]]
name = "testmind"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
regex = "1"
anyhow = "1"
chrono = "0.4"
lazy_static = "1"
serde_yaml = "0.9"
walkdir = "2"
globset = "0.4"
